--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Traffic Light</title>
+    <link rel="stylesheet" href="style.css" >
+
 </head>
 <body>
-    
+    <div class="container">
+        <div class="traffic-light">
+            <div class="panel">
+                <div class=" light light-off">
+
+                </div>
+                <div class="light red-light">
+
+                </div>
+    	        <div class="light green-light">
+
+                </div>
+            
+            </div>
+
+        </div>
+
+        <button>
+            Click-Me
+        </button>
+
+    </div>
 </body>
 </html>
