--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Traffic Light</title>
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="./style.css" >
 
 </head>
 <body>
     <div class="container">
         <div class="traffic-light">
             <div class="panel">
-                <div class=" light light-off">
+                <div id="red" class=" light light-off">
+
 
                 </div>
-                <div class="light red-light">
+                <div id="yellow" class="light yellow-light">
 
                 </div>
-    	        <div class="light green-light">
+    	        <div id="green" class="light light-off">
 
                 </div>
-            
+        
             </div>
 
         </div>
 
-        <button>
-            Click-Me
-        </button>
+        <button onclick="changeTrafficLight()">Click-Me</button>
 
     </div>
+
+
+<script src="./javascript.js"></script>
+
 </body>
 </html>
